--- a/kosta189Final_Coffee/src/main/webapp/resources/css/style.css
+++ b/kosta189Final_Coffee/src/main/webapp/resources/css/style.css
@@ -206,6 +206,26 @@ html, body{
 }
 
 
+/*---------------답글 --------------------*/
+
+.replyValue{
+    margin-left:10px;
+    display: inline-block;
+}
+.replyRead{
+    display: inline-block;
+    margin-left:10px;
+    width:40px;
+}
+.cheerReply{
+    color:red;
+    font-weight: bold;
+}
+
+.questionContent{
+    width:100%;
+    cursor:pointer;
+}
 /*---------------플로팅 메뉴------------*/
 #floatMenu {
 	position: absolute;
@@ -539,12 +559,6 @@ html, body{
 .login-container{
     width:20%;
     height:100%;
-/*
-    display: grid;
-    grid-template-columns: 400px 700px;
-    grid-template-rows: 500px;
-    justify-items: stretch;
-    align-items: center;background-color: white;*/ 
 }
 .login-tabs{
     width:100%;
@@ -566,7 +580,7 @@ html, body{
 }
 
 .login-select input[type=radio]{
-    
+    display: none;
 }
 .login-select label{
     cursor: pointer;
@@ -700,7 +714,6 @@ html, body{
     display: flex;
     justify-content: center;
     width:100%;
-    height:100%; 
 /*    background-image:url(../images/project-background.jpg);*/
     background-color:#f5f5f5;
     background-size: cover;
@@ -709,7 +722,7 @@ html, body{
 }
 .project-container{
     width:1020px; 
-    height:100%;
+    /* height:100%; */
     margin-top: 30px;
 }
 .project-divider{
@@ -894,7 +907,7 @@ html, body{
     background-position: center;
 }
 .mypage-container{
-    width:1020px;
+    width:1320px;
 }
 /*
 .mypage-sidebar-title span{
@@ -903,7 +916,7 @@ html, body{
 }
 */
 .mypage-sidebar{
-    width:20%;
+    width:15%;
     height:100%;
     float:left;
 }
@@ -947,7 +960,7 @@ html, body{
     margin-bottom:0;
 }
 .mypage-contents{
-    width:80%;
+    width:85%;
     height:100%;
     float:right;
     padding:70px 30px 30px 30px;
@@ -965,7 +978,7 @@ html, body{
 .inform-container{
     display:flex;
     flex-direction: column;
-    width:100%;
+    width:70%;
 }
 .inform-container .inform-items{
     display: flex;
@@ -997,10 +1010,69 @@ html, body{
 }
 
 
-/*---------------마이페이지 q&a 응원 ------------------*/
+/*---------------마이페이지 응원 ------------------*/
 .mypage-contents .cheer{
     margin:50px auto;width:90%;font-size:13px;
 }
+
+.mypage-contents .cheer table tr td:first-child{
+    width:5%;
+}
+.mypage-contents .cheer table tr td:nth-child(2){
+    width:10%;
+}
+.mypage-contents .cheer table tr td:nth-child(3){
+    width:75%;
+}
+.mypage-contents .cheer table tr td:nth-child(3) div:first-child{
+    display: inline-block;cursor: pointer;
+}
+.mypage-contents .cheer table tr td:nth-child(3) div:nth-child(2){
+    width:10%;
+}
+.mypage-contents .cheer table tr td:nth-child(3) div:nth-child(3){
+    width:70%;
+}
+.mypage-contents .cheer table tr td:nth-child(4){
+    width:20%;font-weight:300;
+    text-align: center;
+}
+.mypage-contents .cheer .cheerTr{
+    display: none;
+    height:30px;
+    border: 1px solid #EDEDED;
+}
+.mypage-contents .cheer .cheerTr .cheerReply{
+    border: 1px solid #EDEDED;
+    width:70%;
+    height:30px;
+    padding:10px;
+    margin:0 auto;
+}
+.mypage-contents .cheerupReply{  
+    width:80%;
+    margin:0 auto;
+    margin-top:30px;
+}
+.mypage-contents .cheerupReply input{
+    display: inline-block;
+}
+.mypage-contents .cheerupReply input[type=text]{
+    width:90%;
+    height:40px;
+    padding-left:10px;
+}
+.mypage-contents .cheer .cheerupBtn{
+    width:60px;height:40px;font-size:15px;background-color:black;color:white;border-radius: 10px;border:0;outline-width: 0;cursor: pointer;display: inline-block;
+}
+
+.mypage-contents .cheer .replyContent input:first-child{
+    width:70%;height:35px;padding:10px;margin-top:5px;display: inline-block;
+}
+.mypage-contents .cheer .replyContent input:nth-child(2){
+    display: inline-block;width:40px;height:30px;font-size:15px;background-color:black;color:white;border-radius: 5px;border:0;outline-width: 0;cursor: pointer;margin-left:5px;
+}
+
 .mypage-contents .cheer table tr td .thumb{
     object-fit: cover;
     background-position: center center;
@@ -1022,17 +1094,45 @@ html, body{
     height:80px;
 }
 
+/*---------------마이페이지 q&a ------------------*/
 .mypage-contents .qna table tr{
     height:40px;
 }
 .mypage-contents .qna{
     margin:50px auto;width:90%;font-size:13px;
 }
+.mypage-contents .qna table tr th:first-child{
+    width:10%;
+}
+.mypage-contents .qna table tr td:nth-child(2){
+    width:75%;
+}
+.mypage-contents .qna table tr td:nth-child(3){
+    width:5%;
+}
+.mypage-contents .qna table tr td:nth-child(4){
+    width:10%;
+    text-align:center;
+}
+.mypage-contents .qna .questionTr{
+    display: none;
+}
+.mypage-contents .qna .questionTr .questionReply{
+    width:100%;height:100%;border:1px solid #EDEDED;padding:10px;
+}
+.mypage-contents .qna .questionTr .questionReply span{
+    font-size:30px;font-weight: bold;
+}
+.mypage-contents .qna .questionTr .questionReply .questionContentReply{
+    line-height:30px;padding:10px;
+}
+.mypage-contents .qna .questionTr .questionReply .questionContentDetail{
+    line-height: 30px;background-color:aliceblue;letter-spacing: 2px;
+}
 
 /*-----------------프로젝트 상세-----------------*/
 .project-detail-wrap{
     width:100%;
-    height:100%;
 /*    background-image:url(../images/project-detail-background.jpg);*/
     background-color: white;
     background-size: cover;
@@ -1061,6 +1161,7 @@ html, body{
 .project-detail-container{
     margin:0 auto;
     width:1020px;
+    height:100%;
     margin-bottom:30px;
 }
 
@@ -1102,7 +1203,7 @@ html, body{
 .project-detail-main{
     height:100%;
     margin:50px 0 50px 0;
-    position: relative;
+    
 }
 .project-detail-main .project-detail-tabs{
     width:100%;
@@ -1133,18 +1234,74 @@ html, body{
     color: white;
 }
 
-/*
-.cheer table tr td img{
-    width:50px;
-    border-radius: 50%;
-    border-top-left-radius: 50% 50%;
-    border-top-right-radius: 50% 50%;
-    border-bottom-right-radius: 50% 50%;
-    border-bottom-left-radius: 50% 50%;
-}*/
-.project-detail-main .cheer{
-    margin:50px auto;width:90%;font-size:13px;
+.project-detail-main .story{
+    margin:50px auto;width:70%;line-height: 30px;
 }
+
+.project-detail-main .cheer{
+    margin:30px auto;width:90%;font-size:13px;
+}
+.project-detail-main .cheer table tr{
+    border-bottom:1px solid #EDEDED;margin-bottom: 100px;height:100px;
+}
+
+.project-detail-main .cheer table tr td:first-child{
+    width:5%;
+}
+.project-detail-main .cheer table tr td:nth-child(2){
+    width:10%;
+}
+.project-detail-main .cheer table tr td:nth-child(3){
+    width:75%;
+}
+.project-detail-main .cheer table tr td:nth-child(3) div:first-child{
+    display: inline-block;cursor: pointer;
+}
+.project-detail-main .cheer table tr td:nth-child(3) div:nth-child(2){
+    width:10%;
+}
+.project-detail-main .cheer table tr td:nth-child(3) div:nth-child(3){
+    width:70%;
+}
+.project-detail-main .cheer table tr td:nth-child(4){
+    width:20%;font-weight:300;
+    text-align: center;
+}
+.project-detail-main .cheer .cheerTr{
+    display: none;
+    height:30px;
+    border: 1px solid #EDEDED;
+}
+.project-detail-main .cheer .cheerTr .cheerReply{
+    border: 1px solid #EDEDED;
+    width:70%;
+    height:30px;
+    padding:10px;
+    margin:0 auto;
+}
+.project-detail-main .cheerupReply{  
+    width:80%;
+    margin:0 auto;
+    margin-top:30px;
+}
+.project-detail-main .cheerupReply input{
+    display: inline-block;
+}
+.project-detail-main .cheerupReply input[type=text]{
+    width:90%;
+    height:40px;
+    padding-left:10px;
+}
+.project-detail-main .cheer .cheerupBtn{
+    width:60px;height:40px;font-size:15px;background-color:black;color:white;border-radius: 10px;border:0;outline-width: 0;cursor: pointer;display: inline-block;
+}
+.project-detail-main .cheer .replyContent input:first-child{
+    width:70%;height:35px;padding:10px;margin-top:5px;display: inline-block;
+}
+.project-detail-main .cheer .replyContent input:nth-child(2){
+    display: inline-block;width:40px;height:30px;font-size:15px;background-color:black;color:white;border-radius: 5px;border:0;outline-width: 0;cursor: pointer;margin-left:5px;
+}
+
 .project-detail-main .cheer table tr td .thumb{
     object-fit: cover;
     background-position: center center;
@@ -1173,8 +1330,42 @@ html, body{
     margin:50px auto;width:90%;font-size:13px;
 }
 
+.project-detail-main .qna table tr th:first-child{
+    width:10%;
+}
+.project-detail-main .qna table tr td:nth-child(2){
+    width:75%;
+}
+.project-detail-main .qna table tr td:nth-child(3){
+    width:5%;
+}
+.project-detail-main .qna table tr td:nth-child(4){
+    width:10%;
+    text-align:center;
+}
+.project-detail-main .qna .questionTr{
+    display: none;
+}
+.project-detail-main .qna .questionTr .questionReply{
+    width:100%;height:100%;border:1px solid #EDEDED;padding:10px;
+}
+.project-detail-main .qna .questionTr .questionReply span{
+    font-size:30px;font-weight: bold;
+}
+.project-detail-main .qna .questionTr .questionReply .questionContentReply{
+    line-height:30px;padding:10px;
+}
+.project-detail-main .qna .questionTr .questionReply .questionContentDetail{
+    line-height: 30px;background-color:aliceblue;letter-spacing: 2px;
+}
 .project-detail-main .review table tr{
     height:40px;
+}
+.project-detail-main .review table tr td:nth-child(1){
+    text-align:center;
+}
+.project-detail-main .review table tr td:nth-child(3){
+    text-align:center;
 }
 .project-detail-main .review{
     margin:50px auto;width:90%;font-size:13px;
